--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,20 @@ header {
 
 nav ul {
     list-style: none;
-    padding: 0;
+    padding: 3;
     margin-bottom: 1em;
 }
 
 nav ul li {
     display: inline;
-    margin: 0 1em;
+    margin: 1em;
 }
 
-nav ul li a {
-    color: #fff;
+nav ul li button {
+    color: black;
     text-decoration: none;
     font-weight: bold;
-    font-size: 4.4em;
+    font-size: 2.4em;
 }
 
 .hero {
@@ -289,3 +289,4 @@ footer {
     width: 24px; /* Icon size */
     height: 24px; /* Icon size */
 }
+
